= Changelog

== v2024.1.0 (work in progress)

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/52[#52] [services] All `findUsageByName` and `findDefinitionByName` method have been replaced by the new `findByNameAndType` in `org.eclipse.syson.services.UtilService`.

=== Dependency update

- Switch to Sirius Web 2024.1.1 (Please do not use new Portal representation introduced by this release of Sirius Web, it will be removed in SysON soon (see this ticket in Sirius Web)[https://github.com/eclipse-sirius/sirius-web/issues/3013], when Sirius Web will allow to configure which representations can be used or not in Sirius Web-based applications).
- https://github.com/eclipse-syson/syson/issues/52[#52] [metamodel] SysON SysMLv2 metamodel module now depends on `org.eclipse.emf.ecore.xmi` and `java-uuid-generator`.
- Switch to vite 4.5.2

=== Bug fixes

=== New Features

- https://github.com/eclipse-syson/syson/issues/48[#48] [general-view] Display help background message on empty general-view diagram.
- https://github.com/eclipse-syson/syson/issues/52[#52] [syson] Add support for SysMLv2 standard libraries.
- https://github.com/eclipse-syson/syson/issues/60[#60] [syson] Add support for automatic imports.

== v2023.12.0

=== Architectural decision records

- [ADR-000] Adopt ADRs
- [ADR-001] Support direct edit in diagrams

=== New Features

- This is the first release of SysON.
It contains:
** The ability to create and edit SysMLv2 models.
** The ability to create and edit General View diagrams on Package elements. Only some elements can be created/edited in this diagram:
*** Attribute Definition
*** Attribute Usage
*** Enumeration Definition
*** Enumeration Usage
*** Interface Definition
*** Interface Usage
*** Item Definition
*** Item Usage
*** Metadata Definition
*** Package
*** Part Definition
*** Part Usage
*** Port Definition
*** Port Usage
** The ability to create and edit Interconnection View diagrams on Part Usage elements.